Bug 674478 Implement rmdir rf without FTS on Solaris r=bbondy